fix alignment issues

--- a/app/modules/patterns/sass/_signin.scss
+++ b/app/modules/patterns/sass/_signin.scss
@@ -1,19 +1,21 @@
 // body is assigned class of 'signin' via router
 
 .signin {
+  
+    background-color: #254d9d;
+    background-image: linear-gradient(90deg, #4c4ca2 0%, #872e96 40%, #872e96 45%, #c90d8b 100%);
+        background-size: cover;
+    background-repeat: no-repeat;
 
   .bg {
     width: 100vw;
     height: 100vh;
-    background-color: #254d9d;
-    @extend %gradient;
-    background-size: cover;
-    background-repeat: no-repeat;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    align-content: stretch;
   }
 
   header, #header,
@@ -71,6 +73,7 @@
   }
   .signin-footer {
     color: #fff;
+    line-height: 1em;
 
     small {
       opacity: .6;
